# todolist

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  mainn.py  manage.py  pyproject.toml
.github/workflows/: deploy_main.yaml  push_any_excpet_main.yaml
core/: admin.py  models.py  serializers.py  views.py
deploy/: .env  docker-compose.yaml  nginx.conf
tests/: conftest.py  factories.py
tests/test_board/: test_board_create_view.py  test_board_list_view.py
tests/test_bot/: test_bot_teacher.py  test_tguser.py
tests/test_category/: test_categories.py  test_catergory_list.py
tests/test_comments/: test_comment_create.py  test_comment_list.py
tests/test_core/: factories.py  test_login.py  test_signup.py
tests/test_goals/: factories.py  test_goal_category.py  test_goal_comment.py  test_goals.py
todolist/: asgi.py  fields.py  settings.py  urls.py
todolist/bot/: admin.py  models.py  serializers.py  urls.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_initial.py
todolist/bot/tg/: client.py  schema.py
todolist/core/: admin.py  apps.py  serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py
todolist/goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_add_goals_category_model.py  0002_add_goals_model.py  0003_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_objects.py  0006_alter_goalcategory_board.py
